--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,11 @@
 ---
-# tasks file for prometheus_node_exporter
+
+- name: ensure prometheus node exporter package
+  ansible.builtin.package:
+    name: prometheus-node-exporter
+    state: present
+
+- name: ensure prometheus node exporter active
+  ansible.builtin.service:
+    name: prometheus-node-exporter
+    enabled: yes
