--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,6 @@
 galaxy_info:
   role_name: prometheus_node_exporter
+  namespace: oxivanisher
   author: Marc Urben
   description: install prometheus exporter
   company: Thunderbluff
