--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,9 +4,13 @@
   ansible.builtin.package:
     name: prometheus-node-exporter
     state: present
+  become: true
+  become_user: root
 
 - name: Ensure prometheus node exporter active
   ansible.builtin.service:
     name: prometheus-node-exporter
     enabled: true
   ignore_errors: "{{ ansible_check_mode }}"
+  become: true
+  become_user: root
